test/bad/loops/for5.px

for i in 5..4 step "3" do
    skip
